@@ -16,6 +16,7 @@ apt (0.9.8.3) UNRELEASED; urgency=low
   * fail in CopyFile if the FileFds have error flag set
   * ensure state-dir exists before coyping cdrom files
   * fix file location for configure-index.gz in apt.conf(5) (Closes: #711921)
+  * handle missing "Description" in apt-cache show (Closes: #712435)
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 09 Jun 2013 15:06:24 +0200
 
